src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --color-text-emphasis-50: 240, 253, 244;
  --color-text-emphasis-100: 220, 252, 231;
  --color-text-emphasis-200: 187, 247, 208;
  --color-text-emphasis-300: 134, 239, 172;
  --color-text-emphasis-400: 74, 222, 128;
  --color-text-emphasis-500: 34, 197, 94;
  --color-text-emphasis-600: 22, 163, 74;
  --color-text-emphasis-700: 21, 128, 61;
  --color-text-emphasis-800: 22, 101, 52;
  --color-text-emphasis-900: 20, 83, 45;
  --color-text-emphasis-950: 5, 46, 22;
}

.dark {
  --color-bg-primary: 28, 25, 23;
  --color-bg-secondary: 41, 37, 36;
  --color-bg-tertiary: 68, 64, 60;

  --color-text-primary: 231, 229, 228;
  --color-text-secondary: 28, 25, 23;

  --color-text-primary-lighter: 214, 211, 209;
  --color-text-secondary-lighter: 41, 37, 36;
  
  --color-text-emphasis: 34, 197, 94;
}
.light {
  --color-bg-primary: 231, 229, 228;
  --color-bg-secondary: 214, 211, 209;
  --color-bg-tertiary: 168, 162, 158;

  --color-text-primary: 68, 64, 60;
  --color-text-secondary: 231, 229, 228;

  --color-text-primary-lighter: 120, 113, 108;
  --color-text-secondary-lighter: 214, 211, 209;
}

/* --main-color-50: 250, 250, 249;
--main-color-100: 245, 245, 244;
--main-color-200: 231, 229, 228;
--main-color-300: 214, 211, 209;
--main-color-400: 168, 162, 158;
--main-color-500: 120, 113, 108;
--main-color-600: 87, 83, 78;
--main-color-700: 68, 64, 60;
--main-color-800: 41, 37, 36;
--main-color-900: 28, 25, 23;
--main-color-950: 12, 10, 9;

--secondary-color-50: 247, 254, 231;
--secondary-color-100: 236, 252, 203;
--secondary-color-200: 217, 249, 157;
--secondary-color-300: 190, 242, 100;
--secondary-color-400: 163, 230, 53;
--secondary-color-500: 132, 204, 22;
--secondary-color-600: 101, 163, 13;
--secondary-color-700: 77, 124, 15;
--secondary-color-800: 63, 98, 18;
--secondary-color-900: 54, 83, 20;
--secondary-color-950: 26, 46, 5;

--tertiary-color-50: 254, 242, 242;
--tertiary-color-100: 254, 226, 226;
--tertiary-color-200: 254, 202, 202;
--tertiary-color-300: 252, 165, 165;
--tertiary-color-400: 248, 113, 113;
--tertiary-color-500: 239, 68, 68;
--tertiary-color-600: 220, 38, 38;
--tertiary-color-700: 185, 28, 28;
--tertiary-color-800: 153, 27, 27;
--tertiary-color-900: 127, 29, 29;
--tertiary-color-950: 69, 10, 10;

 */

